--- a/www/1my.cnf
+++ b/www/1my.cnf
@@ -1,9 +1,9 @@
 [client]
 name = MySQL
-host = localhost
-port = 3306
+host = 127.0.0.1
+port = 0*
 database = remont
 user = root
 password = 1111
 default-character-set = utf8
-sql_mode = STRICT_TR
+sql_mode = traditional
